README updated w/ main classes configuration and execution process